// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageBanner renders 1`] = `
<styled.div
  className="bannerwrapper"
  color=""
  large="false"
>
  <Styled(Styled(Box))
    mx="auto"
  >
    <Row>
      <Column
        width={1}
      >
        <StyledBannerTitle />
        <StyledBannerSubtitle />
      </Column>
    </Row>
  </Styled(Styled(Box))>
</styled.div>
`;

exports[`ImageBanner renders the subtitleText from props to BannerTitle  1`] = `
<styled.div
  className="bannerwrapper"
  color=""
  large="false"
>
  <Styled(Styled(Box))
    mx="auto"
  >
    <Row>
      <Column
        width={1}
      >
        <StyledBannerTitle />
        <StyledBannerSubtitle>
          And here is a test subtitle!
        </StyledBannerSubtitle>
      </Column>
    </Row>
  </Styled(Styled(Box))>
</styled.div>
`;

exports[`ImageBanner renders the titleText from props to BannerTitle  1`] = `
<styled.div
  className="bannerwrapper"
  color=""
  large="false"
>
  <Styled(Styled(Box))
    mx="auto"
  >
    <Row>
      <Column
        width={1}
      >
        <StyledBannerTitle>
          Here is a test title!
        </StyledBannerTitle>
        <StyledBannerSubtitle />
      </Column>
    </Row>
  </Styled(Styled(Box))>
</styled.div>
`;
